m66 merge: cros: Minimized use pre-minimied show state for caption button update

changes:
Previous CL: crrev.com/c/967414 has bug for session logged in reshowing
minimized browser window. This CL introduces another fix, which is
when window is minimized and update caption buttons, check if there
is pre-minimized window show state and if it exists, apply to that.

TBR=sky@chromium.org

(cherry picked from commit a34f3f9a59f75adb4b9b26a459813e11704bac5f)

Bug: 827444
Test: manual test, see bug fixed.
Change-Id: I0fe7d3a72fba87b2f5d93cd763e406f065e5ae8b
Reviewed-on: https://chromium-review.googlesource.com/987405
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Qiang Xu <warx@google.com>
Cr-Original-Commit-Position: refs/heads/master@{#549737}
Reviewed-on: https://chromium-review.googlesource.com/1014745
Reviewed-by: Qiang Xu <warx@google.com>
Cr-Commit-Position: refs/branch-heads/3359@{#726}
Cr-Branched-From: 66afc5e5d10127546cc4b98b9117aff588b5e66b-refs/heads/master@{#540276}